# amarok-nepomuk

src/core-impl/collections/: CMakeLists.txt
src/core-impl/collections/nepomukcollection/: CMakeLists.txt  NepomukCollection.cpp  NepomukCollection.h  NepomukCollectionFactory.cpp  NepomukCollectionFactory.h  NepomukQueryMaker.cpp  NepomukQueryMaker.h
